--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
+    "debug": "^4.3.4",
     "next": "14.1.3",
     "octokit": "^3.1.2",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
