--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.1.3",
     "octokit": "^3.1.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/debug": "^4.1.12",
