--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open",
+    "test": "cypress run"
   },
   "dependencies": {
     "@vercel/analytics": "^1.2.2",
@@ -24,6 +26,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "cypress": "^13.7.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
