--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "cypress:open": "cypress open",
-    "test": "cypress run"
+    "test": "cypress run",
+    "prepare": "husky"
   },
   "dependencies": {
     "@vercel/analytics": "^1.2.2",
@@ -29,6 +30,7 @@
     "cypress": "^13.7.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "husky": "^9.0.11",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
