--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debug": "^4.3.4",
     "next": "14.1.3",
     "octokit": "^3.1.2",
+    "posthog-js": "^1.116.4",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.2"
