--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "octokit": "^3.1.2",
     "posthog-js": "^1.116.4",
     "react": "^18",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18",
     "sharp": "^0.33.2"
   },
