--- a/package.json
+++ b/package.json
@@ -11,30 +11,30 @@
     "test": "cypress run"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.2.2",
-    "@vercel/speed-insights": "^1.0.10",
-    "debug": "^4.3.4",
-    "next": "14.1.3",
-    "octokit": "^3.1.2",
-    "posthog-js": "^1.116.4",
-    "react": "^18",
+    "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
+    "debug": "^4.4.0",
+    "next": "^15.1.6",
+    "octokit": "^4.1.0",
+    "posthog-js": "^1.211.0",
+    "react": "^19",
     "react-cookie-consent": "^9.0.0",
-    "react-dom": "^18",
-    "sharp": "^0.33.2"
+    "react-dom": "^19",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/debug": "^4.1.12",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "cypress": "^13.7.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
+    "cypress": "^14.0.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.6",
     "postcss": "^8",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.12",
-    "tailwindcss": "^3.3.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5"
   }
 }
