--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   "dependencies": {
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
+    "clsx": "^2.1.1",
     "debug": "^4.4.0",
+    "motion": "^12.0.6",
     "next": "^15.1.6",
     "octokit": "^4.1.0",
     "posthog-js": "^1.211.0",
     "react": "^19",
     "react-cookie-consent": "^9.0.0",
     "react-dom": "^19",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
