Update ESLint configuration and dependencies for improved linting support

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "cypress run"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^15.1.6",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "clsx": "^2.1.1",
@@ -32,7 +33,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "cypress": "^14.0.0",
-    "eslint": "^9",
+    "eslint": "^9.19.0",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "prettier": "^3.4.2",
