--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cypress": "^14.0.0",
     "eslint": "^9.19.0",
     "eslint-config-next": "15.1.6",
+    "eslint-config-prettier": "^10.0.1",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
