--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.12.3",
     "@next/eslint-plugin-next": "^15.1.6",
+    "@radix-ui/react-accordion": "^1.2.2",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "clsx": "^2.1.1",
     "debug": "^4.4.0",
+    "lucide-react": "^0.474.0",
     "motion": "^12.0.6",
     "next": "^15.1.6",
     "octokit": "^4.1.0",
