--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-cookie-consent": "^9.0.0",
     "react-dom": "^19",
     "sharp": "^0.33.5",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
