--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@lottiefiles/dotlottie-react": "^0.12.3",
     "@next/eslint-plugin-next": "^15.1.6",
     "@radix-ui/react-accordion": "^1.2.2",
+    "@tabler/icons-react": "^3.30.0",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "clsx": "^2.1.1",
