--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@lottiefiles/dotlottie-react": "^0.12.3",
     "@next/eslint-plugin-next": "^15.1.6",
     "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@tabler/icons-react": "^3.30.0",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "debug": "^4.4.0",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.6",
     "next": "^15.1.6",
+    "next-themes": "^0.4.4",
     "octokit": "^4.1.0",
     "posthog-js": "^1.211.0",
     "react": "^19",
