--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^19",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
+    "vaul": "^1.1.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
